Fix /pay consuming cooldown on failed payments; add missing shop.pricing config
/pay checked-and-consumed the cooldown at the very top of execute(), before
any of the checks that can still reject the payment (economy disabled,
invalid name/amount, offline-not-allowed, self-payment, recipient
pay-toggle, ignore-list, max-transfer-limit, insufficient funds). A
mistyped name or an over-the-limit amount cost the player a full cooldown
for a payment that never happened. Cooldown is now only checked (read-only)
up front and actually consumed after EconomyAPI.payPlayer() succeeds.

Also added a "shop" top-level section to config.json: PricingEngine
(dynamic ChestShop/NPC-shop pricing — supply/demand, time discounts, bulk
tiers) reads shop.pricing but the key never existed anywhere in the
template, so the feature was fully implemented and reachable in code with
no discoverable way to configure it (matches "0 rule(s) active,
enabled=false" seen in every boot log). Registered "shop" in
ConfigSplitter's FILE_SECTIONS_MAP (mapped into items.json, no dedicated
split file for one small section) and bumped both the monolithic config
version (43->44) and items.json's split version (1->2) so existing
installs pick it up via the normal merge-new-keys path. Verified live:
split-config status now reports "items.json — items, shop" instead of
just "items", with all files still valid.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Sc9EitwigUmGjKwYtGhMVd